<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/authEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/login_with_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/registerEmail"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <Button
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toStartOf="@id/authEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authEmail" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@null"
        android:src="@drawable/background_rounded_corners"
        app:layout_constraintBottom_toBottomOf="@id/authPhone"
        app:layout_constraintEnd_toStartOf="@id/authPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/authPhone" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@null"
        android:src="@drawable/background_rounded_corners"
        app:layout_constraintBottom_toBottomOf="@id/authPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/authPhone"
        app:layout_constraintTop_toTopOf="@id/authPhone" />

    <ImageView
        android:id="@+id/authPhone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/white"
        android:contentDescription="@null"
        android:src="@drawable/ic_phones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="200dp" />

</androidx.constraintlayout.widget.ConstraintLayout>